force-app/main/default/objects/Trainer__c/fields/Application_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Fee Received</label>
    <type>Checkbox</type>
</CustomField>