force-app/main/default/objects/Trainer__c/fields/Area_Served__c.field-meta.xml
<CustomField>
    <fullName>Area_Served__c</fullName>
    <description>The area or region served by this trainer</description>
    <label>Area Served</label>
    <length>150</length>
    <type>Text</type>
</CustomField>