force-app/main/default/objects/Trainer__c/fields/Certification_Fee__c.field-meta.xml
<CustomField>
    <fullName>Certification_Fee__c</fullName>
    <label>Certification Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>