force-app/main/default/objects/Trainer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field connects the trainer object to his/her contact information</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trainers</relationshipLabel>
    <relationshipName>Trainers</relationshipName>
    <type>Lookup</type>
</CustomField>