force-app/main/default/objects/Trainer__c/fields/Courses_Complete__c.field-meta.xml
<CustomField>
    <fullName>Courses_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courses Completed</label>
    <type>Checkbox</type>
</CustomField>