force-app/main/default/objects/Trainer__c/fields/External_Trainer__c.field-meta.xml
<CustomField>
    <fullName>External_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether this trainer is an Atlas trainer</description>
    <label>External (Non-Atlas) Trainer</label>
    <type>Checkbox</type>
</CustomField>