force-app/main/default/objects/Trainer__c/fields/Final_Certification_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Certification_Fee_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Certification Fee Received</label>
    <type>Checkbox</type>
</CustomField>