force-app/main/default/objects/Trainer__c/fields/Initial_Certification_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_Certification_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Certification Payment Received</label>
    <type>Checkbox</type>
</CustomField>