force-app/main/default/objects/Trainer__c/fields/Initial_Trainer_Survey_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_Trainer_Survey_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Trainer Survey Received</label>
    <type>Checkbox</type>
</CustomField>