force-app/main/default/objects/Trainer__c/fields/Intro_Dog_People_Courses_Available__c.field-meta.xml
<CustomField>
    <fullName>Intro_Dog_People_Courses_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intro, Dog &amp; People Courses Available</label>
    <type>Checkbox</type>
</CustomField>