force-app/main/default/objects/Trainer__c/fields/Manuals_Sent__c.field-meta.xml
<CustomField>
    <fullName>Manuals_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manuals Sent</label>
    <type>Checkbox</type>
</CustomField>