force-app/main/default/objects/Trainer__c/fields/Num_Reference_Letters_Received__c.field-meta.xml
<CustomField>
    <fullName>Num_Reference_Letters_Received__c</fullName>
    <label># Reference Letters Received</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>