force-app/main/default/objects/Trainer__c/fields/Recertification_CEUs__c.field-meta.xml
<CustomField>
    <fullName>Recertification_CEUs__c</fullName>
    <label># Recertification CEUs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>