force-app/main/default/objects/Trainer__c/fields/Recertification_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Recertification_Fee_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recertification Fee Received</label>
    <type>Checkbox</type>
</CustomField>