force-app/main/default/objects/Trainer__c/fields/Reference_Letters_Received__c.field-meta.xml
<CustomField>
    <fullName>Reference_Letters_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Letters Received</label>
    <type>Checkbox</type>
</CustomField>