force-app/main/default/objects/Trainer__c/fields/Second_Certification_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Second_Certification_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Certification Payment Received</label>
    <type>Checkbox</type>
</CustomField>