force-app/main/default/objects/Trainer__c/fields/Service_Course_Available__c.field-meta.xml
<CustomField>
    <fullName>Service_Course_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Course Available</label>
    <type>Checkbox</type>
</CustomField>