force-app/main/default/objects/Trainer__c/fields/Suspension_Notes__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Notes__c</fullName>
    <label>Suspension Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>