force-app/main/default/objects/Trainer__c/fields/Taking_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>Taking_New_Clients__c</fullName>
    <label>Taking New Clients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>