force-app/main/default/objects/Trainer__c/fields/Testouts_Available__c.field-meta.xml
<CustomField>
    <fullName>Testouts_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testouts Available</label>
    <type>Checkbox</type>
</CustomField>