force-app/main/default/objects/Trainer__c/fields/Testouts_Completed__c.field-meta.xml
<CustomField>
    <fullName>Testouts_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testouts Completed</label>
    <type>Checkbox</type>
</CustomField>