force-app/main/default/objects/Trainer__c/fields/Trainer_Listed_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Listed_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trainer Listed on Website</label>
    <type>Checkbox</type>
</CustomField>