force-app/main/default/objects/Trainer__c/fields/Trainer_Rate_Worksheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Rate_Worksheet_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trainer Rate Worksheet Sent</label>
    <type>Checkbox</type>
</CustomField>