force-app/main/default/objects/Trainer__c/recordTypes/Trainer_Intake.recordType-meta.xml
<RecordType>
    <fullName>Trainer_Intake</fullName>
    <active>true</active>
    <label>Trainer - Intake</label>
</RecordType>