force-app/main/default/objects/Trainer__c/recordTypes/Trainer_On_boarding.recordType-meta.xml
<RecordType>
    <fullName>Trainer_On_boarding</fullName>
    <active>true</active>
    <label>Trainer - On-boarding</label>
</RecordType>