force-app/main/default/objects/Trainer__c/recordTypes/Trainer_On_going.recordType-meta.xml
<RecordType>
    <fullName>Trainer_On_going</fullName>
    <active>true</active>
    <label>Trainer - On-going</label>
</RecordType>